# NIR

./: .gitignore
configs/: synth_config.yaml
experiments/: ragas_synth_mvp.py  ragas_testset_generation.ipynb
experiments/multihop_rag_benchmark/: README.md  config.py  requirements.txt
experiments/multihop_rag_benchmark/evaluation/: __init__.py  evaluator.py  metrics.py
experiments/multihop_rag_benchmark/experiments/: run_benchmark.py
experiments/multihop_rag_benchmark/generation/: __init__.py  llm_client.py
hybrid_rag/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  cli.py  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
hybrid_rag/api/: __init__.py  app.py  schemas.py
hybrid_rag/core/: __init__.py  config.py  llm.py  models.py  prompts.py
hybrid_rag/indexing/: __init__.py  graph_index.py  vector_index.py
hybrid_rag/retrieval/: __init__.py  hybrid.py
hybrid_rag/ui/: app.py
multihop_rag_benchmark/: __init__.py  requirements.txt
multihop_rag_benchmark/data/: __init__.py  loader.py  preprocessing.py
multihop_rag_benchmark/evaluation/: evaluator.py  metrics.py
multihop_rag_benchmark/experiments/: run_benchmark.py
multihop_rag_benchmark/retrieval/: __init__.py  hybrid_retriever.py  kg_retriever.py
synth/: README.md  __init__.py  api_clients.py  build_kg.py  chunking.py  config.py  generate_testset.py  graph.py  graphml_to_neo4j.py  load_corpus.py  requirements.txt  testset.py  utils.py  validate_and_export.py  validators.py  visualize_graph.py
(+23 files in other folders)
